--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.timestampapp'
+    namespace 'com.example.timestamp'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.timestampapp"
-        minSdk 24
+        applicationId "com.example.timestamp"
+        minSdk 26
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -34,6 +34,14 @@ android {
 }
 
 dependencies {
+
+//    implementation platform('com.google.firebase:firebase-bom:29.0.4')
+    implementation platform('com.google.firebase:firebase-bom:32.7.4')
+
+    implementation ('com.google.firebase:firebase-messaging') {
+        exclude module: "play-services-safetynet"
+    }
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
